Reconfigured File Deletions

--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -13,8 +13,8 @@
         <load-on-startup>1</load-on-startup>
         <multipart-config>
             <location></location>
-<!--            <max-file-size>5242880</max-file-size>5MB
-            <max-request-size>20971520</max-request-size>20MB-->
+            <max-file-size>209715200</max-file-size>
+            <max-request-size>524288000</max-request-size>
             <file-size-threshold>0</file-size-threshold>
         </multipart-config>
         
